SET(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/Include)
INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
SET(INCLUDE_FILES Include/Math/Math.hpp Include/Math/Vector3.hpp)
SET(SOURCE_FILES Source/Vector3.cpp)
#ADD_DEFINITIONS(-DBUILDING_WORLD)
ADD_LIBRARY(Math STATIC ${INCLUDE_FILES} ${SOURCE_FILES})
# Export the include directory.
SET(MATH_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

# Make a unit test holder for the Math library.
IF(BUILD_UNIT_TESTS)
    # Add the gmock include directories.
    INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIRS})
    ADD_EXECUTABLE(_TestMath Tests/Main.cpp)
    TARGET_LINK_LIBRARIES(_TestMath Math GMock)
    ADD_TEST(NAME _TestMath COMMAND _TestMath)
ENDIF(BUILD_UNIT_TESTS)
