SET(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/Include)
INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
SET(INCLUDE_FILES Include/Hello.hpp)
SET(SOURCE_FILES Source/Hello.cpp)
ADD_LIBRARY(Hello STATIC ${INCLUDE_FILES} ${SOURCE_FILES})
# Export the include directory.
SET(HELLO_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
