SET(INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/Include)
INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
SET(INCLUDE_FILES Include/World.hpp)
SET(SOURCE_FILES source/World.cpp)
ADD_LIBRARY(World SHARED ${INCLUDE_FILES} ${SOURCE_FILES})
# Export the include directory.
SET(WORLD_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
